apps/system/style/statusbar/statusbar.css
#top-panel {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 2rem;
}

#screen.rocketbar-focused .gesture-panel {
  pointer-events: none;
}

#statusbar-background {
  width: 100%;
  height: 2.4rem;
  background-color: #000;
  opacity: 1;
  padding: 0;
  transform: scaleY(1);
  transition: transform 0.1s, opacity 0.5s;
  transform-origin: left top;
}

#statusbar {
  position: fixed;
  width: 100%;
  height: 2.4rem;
  top: 0;
  left: 0;
}

body:not(.rb-enabled) #statusbar {
  transition: transform 0.2s linear;
}

#screen:not(.utility-tray):not(.attention) #statusbar-background:not(.opaque) {
  /* We want to show both the statusbar and homesearch bar at 15% opacity.
     The homescreen has a 5% wallpaper overlay, so 0.1 is needed to match. */
  opacity: 0.1;
}

/* Hiding the black background while the homescreen is in foreground but not
 * utility tray or attention screen */
#screen.lockscreen-camera > #statusbar,
#statusbar.invisible {
  transform: scaleY(0);
  transform-origin: left top;
}

#statusbar-background.hidden {
  display: none;
}

#screen.lockscreen-camera > #statusbar-background {
  display: none;
}

#screen.locked:not(.attention) #statusbar,
#screen.locked:not(.attention) #statusbar-background {
  background-color: transparent;
  display: block;
  transform: scaleY(1);
}

#screen.locked:not(.attention) #statusbar-background:before {
  background-color: transparent;
}

#screen:not(.locked) #statusbar.invisible.dragged {
  background-color: black;
}

#screen.attention.locked #statusbar-time {
  display: block;
}

#statusbar-icons > * {
  float: right;
  margin: 0 0.2rem 0 0.3rem;
}

#statusbar-icons {
  position: absolute;
  width: calc(50% - 0.8rem);
  height: 2rem;
  margin: 0;
  top: 0;
  right: 0;
  padding: 0.4rem 0.8rem;
  transition: opacity 0.3s;
  overflow: hidden;
  white-space: nowrap;
}

#screen.rocketbar-focused:not(.locked) #statusbar-icons,
#screen.rocketbar-expanded.cards-view #statusbar-icons,
#screen:not(.locked):not(.utility-tray).fullscreen-app #statusbar:not(.dragged) #statusbar-icons {
  visibility: hidden;
  opacity: 0;
}

#screen.rocketbar-focused #statusbar-background {
  visibility: hidden;
  opacity: 0;
}

body:not(.rb-enabled) #statusbar-icons {
  width: 100%;
  box-sizing: border-box;
}

#statusbar-title,
body:not(.rb-enabled) #statusbar-icons > .sb-start {
  float: left;
  margin: 0 0.2rem 0 0;
  transition: visibility 0.5s ease, transform 0.5s ease;
}

*[dir=rtl] #statusbar-icons {
  right: auto;
  left: 0;
}

*[dir=rtl] #statusbar-icons > * {
  float: left;
}

*[dir=rtl] #statusbar-icons > .sb-start {
  float: right;
}

#statusbar-icons > .sb-start-upper {
  visibility: hidden;
  position: absolute;
  left: 0;
  top: -2.4rem;
  transition: visibility 0.5s ease, transform 0.5s ease;
}

*[dir=rtl] #statusbar-icons > .sb-start-upper {
  left: auto;
  right: 0;
}

body:not(.rb-enabled) .utility-tray #statusbar-icons > .sb-start-upper,
.utility-tray #statusbar > #statusbar-title,
#statusbar-title.hidden {
  visibility: visible;
  transform: translateY(2.4rem);
}

body:not(.rb-enabled) .utility-tray #statusbar-icons > .sb-start {
  visibility: hidden;
  transform: translateY(2.4rem);
}

#statusbar-label {
  position: relative;
  margin-left: 0.8rem;
  padding-top: 0.4rem;
  color: #ffffff;
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.6rem;
}

body.rb-enabled #statusbar-label {
  display: none;
}

#statusbar-time, #statusbar-data:not(.sb-icon-data-circle) {
  position: relative;
  color: #fff;
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.6rem;
}

#statusbar-time span {
  margin: 0;
  font-size: 1.1rem;
}

/* signal and data icons */
#statusbar-connections {
  margin: 0;
  padding: 0;
}

#statusbar-connections > * {
  float: right;
  pointer-events: none;
  margin: 0 0.2rem;
}

#statusbar-connections .statusbar-data:not(.sb-icon-data-circle) {
  color: #fff;
  font-size: 1.5rem;
  position: relative;
  bottom: 0.1rem;
}

#statusbar-connections .statusbar-data:not(.sb-icon-data-circle) {
  background: none;
  width: auto;
}

#statusbar-connections[data-multiple="true"] .statusbar-signal {
  position: relative;
}

#statusbar-connections[data-multiple="true"] .statusbar-signal::before {
  position: absolute;
  font-size: 0.8rem;
  bottom: 0;
  left: -0.6rem;
}

#statusbar-connections[data-multiple="true"] .statusbar-signal[data-index="1"]::before {
  content: '1';
}
#statusbar-connections[data-multiple="true"] .statusbar-signal[data-index="2"]::before {
  content: '2';
}
#statusbar-connections[data-multiple="true"] .statusbar-signal[data-index="3"]::before {
  content: '3';
}
#statusbar-connections[data-multiple="true"] .statusbar-signal[data-index="4"]::before {
  content: '4';
}

#statusbar-connections[data-multiple="true"] .statusbar-data {
  position: relative;
  width: 1.3rem;
  margin: 0;
  font-size: 0.8rem;
  text-align: right;
}

#statusbar-connections[data-multiple="true"] .statusbar-data.sb-icon-data-circle {
  top: -0.1rem;
  left: 0.2rem;
  width: 0.8rem;
  height: 0.8rem;
  background-size: 16.7rem 4.8rem;
  background-position: -6.68rem -4rem;
}

#statusbar-connections[data-multiple="true"] .statusbar-data[hidden] {
  display: block;
  opacity: 0;
}

/* call forwarding icons */
#statusbar-call-forwardings {
  margin: 0;
  padding: 0;
}

#statusbar-call-forwardings > * {
  float: right;
  pointer-events: none;
  margin: 0 0.6rem;
}

#statusbar-call-forwardings .sb-icon-call-forwarding {
  position: relative;
}

#statusbar-call-forwardings[data-multiple="true"] .sb-icon-call-forwarding::before {
  position: absolute;
  font-size: 0.8rem;
  top: 0.5rem;
  left: -0.6rem;
}

#statusbar-call-forwardings[data-multiple="true"] .sb-icon-call-forwarding[data-index="1"]::before {
  content: '1';
}
#statusbar-call-forwardings[data-multiple="true"] .sb-icon-call-forwarding[data-index="2"]::before {
  content: '2';
}
/* ... */

